screenshot fix on mobile

--- a/app/assets/stylesheets/_screenshots.css.scss
+++ b/app/assets/stylesheets/_screenshots.css.scss
@@ -1,6 +1,6 @@
 #screenshot{
   flex: 0 0 100%;
-  margin-top: 60px;
+  margin-top: 8rem;
   margin-left: 5px;
   @media #{$tablet}{
     position: fixed;
